--- a/front/src/app/pages/pycuda/component/image-processor.component.scss
+++ b/front/src/app/pages/pycuda/component/image-processor.component.scss
@@ -332,3 +332,9 @@ $text-color-secondary: var(--text-color-secondary);
         background: #F3E5F5;
     }
 }
+
+.filter-img {
+    width: 20%;
+    height: 20%;
+    object-fit: contain;
+}   
