--- a/front/src/app/pages/pycuda/component/image-processor.component.html
+++ b/front/src/app/pages/pycuda/component/image-processor.component.html
@@ -322,6 +322,14 @@
                 ></p-button>
             </div>
         </div>
+
+        <p-image
+                [src]="previewUrl"
+                alt="Original"
+                width="100%"
+                [preview]="true"
+                imageClass="border-round-lg shadow-3"
+            ></p-image>
         
         <p-image
             [src]="processedImageUrl"
