prueba_filtros_faltantes

--- a/front/src/app/pages/pycuda/component/image-processor.component.html
+++ b/front/src/app/pages/pycuda/component/image-processor.component.html
@@ -216,7 +216,8 @@
                                 [ngClass]="{
                                     'pi-image text-primary': filter.value === 'emboss',
                                     'pi-box text-primary': filter.value === 'laplace',
-                                    'pi-circle text-primary': filter.value === 'blur'
+                                    'pi-circle text-primary': filter.value === 'blur',
+                                    'pi-star text-primary': filter.value === 'gaussian'
                                 }"></i>
                                 <div class="text-900 font-semibold text-sm">{{ filter.label }}</div>
                             </div>
